--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "knex": "^0.16.3",
+    "node-sass": "^4.11.0",
     "pg": "^7.8.0",
     "react": "^16.7.0",
+    "react-bootstrap": "^0.32.4",
+    "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
