--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "jquery": "^3.3.1",
     "knex": "^0.16.3",
     "node-sass": "^4.11.0",
     "passport": "^0.4.0",
